--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "prettier-plugin-svelte": "^3.2.3",
     "publint": "^0.2.8",
     "semantic-release": "^23.1.1",
-    "svelte": "^4.2.17",
+    "svelte": "^5.0.0-next.1",
     "svelte-check": "^3.7.1",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
@@ -83,7 +83,7 @@
     "vitest": "^1.6.0"
   },
   "peerDependencies": {
-    "svelte": ">=3.47.0 <5.0.0"
+    "svelte": "^5.0.0-next.1"
   },
   "publishConfig": {
     "access": "public"
